# implosive-genesis

./: .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  cli.md  examples.md  index.md  templates.md
docs/chronology/: full.md
docs/render/: fractal.md
docs/simulation/: tesseract.md
docs/theory/: anesthesia.md  entropic_price.md  frameprinciple.md  oipk.md  tesseract.md
src/implosive_genesis/: __init__.py  cli.py  preset.py  validator.py
src/implosive_genesis/chronology/: __init__.py  integration.py
src/implosive_genesis/core/: __init__.py  integration.py  physics.py  type6.py  vrig.py
src/implosive_genesis/formalization/: __init__.py  entropic_price.py  phi_scaling.py
src/implosive_genesis/medium/: __init__.py  modulation.py
src/implosive_genesis/oipk/: __init__.py  kernel.py
src/implosive_genesis/render/: __init__.py  fractal_tesseract.py
src/implosive_genesis/simulation/: __init__.py  cmb_falsification.py  cosmic_moments.py  entropy_governance.py  tesseract_render.py
src/implosive_genesis/templates/: genesis.py
src/implosive_genesis/theory/: __init__.py  frameprinciple.py  models.py  tesseract.py
tests/: test_chronology.py  test_cli.py  test_core.py  test_formalization.py  test_medium.py  test_oipk.py  test_preset.py  test_render.py  test_simulation.py  test_simulation_v2.py  test_theory.py  test_validator.py
