[project]
name = "implosive-genesis"
version = "0.4.0"
description = "Implosive Genesis – rekursive Entstehung von Raum, Zeit und Bewusstsein (V_RIG, OIPK, Frameprinciple, Type-6, Fraktale Rendering-Engine)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon" }]
requires-python = ">=3.11"
keywords = ["physics", "consciousness", "recursion", "spacetime", "implosion", "genesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "sympy>=1.12",
    "matplotlib[animation]>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ig = "implosive_genesis.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/implosive-genesis"
Issues = "https://github.com/GenesisAeon/implosive-genesis/issues"
Documentation = "https://genesisaeon.github.io/implosive-genesis/"
Zenodo = "https://doi.org/10.5281/zenodo.18942660"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/implosive_genesis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=implosive_genesis --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

